# federation-api

./: .docker.env  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml  sonar-project.properties
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 60edd895af44_first_migration_create_tables.py
platform_registry/: crud.py  initial_data.py  main.py  models.py  schemas.py  utils.py
platform_registry/alembic/: env.py
platform_registry/alembic/versions/: 47a898c72185_rename_m2m_rels.py  e3e0a0fa51c8_initial_migration.py  f010c0079052_alter_fields.py  f1d631fe4c9c_access_keys_abel.py
platform_registry/api/: deps.py  main.py  routers.py
platform_registry/api/routers/: auth.py  entities.py  entity_types.py  platform_shared_projects.py  platforms.py  project_membership.py  project_regulatory_framework.py  projects.py  (+3 more)
platform_registry/core/: auth.py  config.py  database.py  security.py
platform_registry/crud/: access_keys.py  entities.py  platforms.py  platforms_shared_projects.py  projects.py  projects_membership.py  projects_regulatory_frameworks.py  regulatory_frameworks.py  roles.py  users.py
platform_registry/schemas/: __init__.py  entity.py  entity_type.py  platform.py  platform_shared_projects.py  project.py  project_membership.py  project_regulatory_framework.py  regulatory_framework.py  role.py  user.py
platform_registry/services/: access_keys.py  entities.py  platforms.py  projects.py  regulatory_frameworks.py  roles.py  users.py
platform_registry/tests/: conftest.py  utils.py
scripts/: test.sh  version.sh
(+18 files in other folders)
